# AIC24

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
aic51/cli/: __main__.py
aic51/cli/commands/: __init__.py  add.py  analyse.py  command.py  index.py  init.py  serve.py
aic51/config/: __init__.py  loader.py
aic51/layout/: config.yaml
aic51/milvus-standalone/: milvus-standalone-docker-compose.yaml
